--- a/trunk/res/layout/main.xml
+++ b/trunk/res/layout/main.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
-<TextView android:id="@+id/tv_content"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
-</ScrollView>
+    android:orientation="vertical">
+	
+	<include layout="@layout/layout_loading" />
+	
+	<ListView android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:id="@+id/lv" />
+	
+</LinearLayout>
