--- a/trunk/res/layout/main.xml
+++ b/trunk/res/layout/main.xml
@@ -8,6 +8,7 @@
 	
 	<ListView android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-		android:id="@+id/lv" />
+		android:id="@+id/lv"
+		android:listSelector="@null" />
 	
 </LinearLayout>
