--- a/trunk/res/layout/main.xml
+++ b/trunk/res/layout/main.xml
@@ -6,9 +6,9 @@
 	
 	<include layout="@layout/layout_loading" />
 	
-	<ListView android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
-		android:id="@+id/lv"
-		android:listSelector="@null" />
+	<android.support.v4.view.ViewPager
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:id="@+id/view_pager" />
 	
 </LinearLayout>
